samples/_failures_safe/1761497101_38ed84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0125e5ef.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_0125e5ef.c:122:5: error: expected declaration or statement at end of input
  122 |     cloud->count = 0;
      |     ^~~~~
